--- a/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/app/build.gradle
+++ b/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/app/build.gradle
@@ -5,7 +5,7 @@ android {
 
     defaultConfig {
         applicationId "com.android.example.favoritetoys"
-        minSdkVersion 10
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -15,12 +15,16 @@ android {
             minifyEnabled false
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+    buildToolsVersion = '28.0.3'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:25.1.0'
+    implementation 'com.android.support:appcompat-v7:25.4.0'
 
-    // TODO (7) Remove the ConstraintLayout dependency as we aren't using it for these simple projects
-    implementation 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+//    implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta4'
 }
