--- a/Lesson03-Green-Recycler-View/T03.01-Exercise-RecyclerViewLayout/app/build.gradle
+++ b/Lesson03-Green-Recycler-View/T03.01-Exercise-RecyclerViewLayout/app/build.gradle
@@ -6,6 +6,7 @@ android {
     defaultConfig {
         applicationId "com.example.android.recyclerview"
         minSdkVersion 10
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -20,6 +21,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:25.1.0'
-
-    // TODO (1) Add RecyclerView dependency
+    implementation 'com.android.support:recyclerview-v7:25.1.0'
+    //  (1) Add RecyclerView dependency
 }
